; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/replication/extr_walsender.c_GetStandbyFlushRecPtr.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/replication/extr_walsender.c_GetStandbyFlushRecPtr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ThisTimeLineID = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @GetStandbyFlushRecPtr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @GetStandbyFlushRecPtr() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = call i64 @GetWalRcvWriteRecPtr(i32* null, i64* %4)
  store i64 %6, i64* %3, align 8
  %7 = call i64 @GetXLogReplayRecPtr(i64* %2)
  store i64 %7, i64* %1, align 8
  %8 = load i64, i64* %2, align 8
  store i64 %8, i64* @ThisTimeLineID, align 8
  %9 = load i64, i64* %1, align 8
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %4, align 8
  %11 = load i64, i64* @ThisTimeLineID, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %19

13:                                               ; preds = %0
  %14 = load i64, i64* %3, align 8
  %15 = load i64, i64* %1, align 8
  %16 = icmp sgt i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = load i64, i64* %3, align 8
  store i64 %18, i64* %5, align 8
  br label %19

19:                                               ; preds = %17, %13, %0
  %20 = load i64, i64* %5, align 8
  ret i64 %20
}

declare dso_local i64 @GetWalRcvWriteRecPtr(i32*, i64*) #1

declare dso_local i64 @GetXLogReplayRecPtr(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
